--- a/src/view/camano-island-coffee.html
+++ b/src/view/camano-island-coffee.html
@@ -8,7 +8,9 @@
         <%= require('html-loader!./layout/header.html') %>
         <%= require('html-loader!./layout/email.html') %>
         <%= require('html-loader!./layout/nav.html') %>
-        <%= require('html-loader!./layout/body.html') %>
+        <div class="movie">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ndvg8ccDC1Y?start=7" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
         <%= require('html-loader!./layout/footer.html')%>
     </body>
 </html>
