--- a/src/view/layout/nav.html
+++ b/src/view/layout/nav.html
@@ -17,7 +17,7 @@
                 </a>
             </li>
             <li class="nav-item js-partner">
-                <a class="link" href="./user-center.html">
+                <a class="link">
                     + PARTNERS
                 </a>
             </li>
@@ -68,7 +68,7 @@
         <div class="arrow-up"></div>
         <ul class="items">
             <li class="item">
-                CAMANO ISLAND COFFEE
+                <a href="./camano-island-coffee.html" class="link">CAMANO ISLAND COFFEE</a>
             </li>
         </ul>
     </div>
