--- a/src/page/common/header/index.css
+++ b/src/page/common/header/index.css
@@ -2,7 +2,7 @@
 * @Author: Zihao Tao
 * @Date:   2018-11-06 21:04:33
 * @Last Modified by:   Zihao Tao
-* @Last Modified time: 2018-12-27 19:22:40
+* @Last Modified time: 2018-12-28 11:18:19
 */
 /* header */
 @import url('https://fonts.googleapis.com/css?family=Thasadith');
@@ -44,84 +44,9 @@ img {
     cursor: pointer;
 }
 
-.m {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    background-color: rgba(256,256,256,.4);
-    z-index: 1000;
-    overflow-x: hidden;
-    overflow-y: auto;  
+@media screen and (max-width:1000px) {
+    .head-wrapper {
+        width: 100%;
+    }
 }
-
-.email {
-    display: flex;
-    justify-content: space-around;
-    width: 1118px;
-    margin: 0 auto;
-    font-family: 'Thasadith', sans-serif;
-    position: relative;
-    top:240px;
-    background: white;
-}
-.input {
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    background: #fafafa;
-    color: #000;
-    font-family: sans-serif;
-    font-size: 12px;
-    line-height: normal;
-    box-sizing: border-box;
-    border-radius: 2px;
-    height: 40px;
-}
-
-.text {
-    width: 100%;
-    padding: 12px;
-    margin: 6px 0 4px;
-    border: 1px solid #ccc;
-    background: #fafafa;
-    color: #000;
-    font-family: sans-serif;
-    font-size: 12px;
-    line-height: normal;
-    box-sizing: border-box;
-    border-radius: 2px;
-}
-
-.fa-times {
-    position: absolute;
-    left: 1165px;
-    top: 105px;
-    font-size: 20px;
-}
-
-.left {
-    padding: 40px;
-}
-
-.right {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    width: 500px;
-    margin: 40px 40px;
-}
-
-.bttn {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    text-align: center;
-    width: 129px;
-    height: 42px;
-    margin: 20px 0px;
-}
-
-
-
 
