--- a/src/page/common/layout.css
+++ b/src/page/common/layout.css
@@ -2,7 +2,7 @@
 * @Author: Zihao Tao
 * @Date:   2018-11-06 17:35:28
 * @Last Modified by:   Zihao Tao
-* @Last Modified time: 2018-12-27 17:27:10
+* @Last Modified time: 2018-12-28 11:24:28
 */
 /* css reset */
 * {
@@ -132,7 +132,9 @@ input[type='checkbox'] {
     height: 1100px;
 }
 
-
+.all {
+    z-index: 1;
+}
 
 
 
