--- a/src/page/common/nav/index.css
+++ b/src/page/common/nav/index.css
@@ -1,8 +1,8 @@
 /*
 * @Author: Zihao Tao
 * @Date:   2018-11-06 20:35:27
-* @Last Modified by:   Zihao Tao
-* @Last Modified time: 2018-12-27 19:53:21
+* @Last Modified by:   tino
+* @Last Modified time: 2018-12-28 11:22:00
 */
 @import url('https://fonts.googleapis.com/css?family=Thasadith');
 .nav {
